--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,9 @@ html, body {
 
 .content {
   padding-bottom: 1.2rem;
-  height: 100%; }
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
   .content .container_page-nav {
     margin-bottom: -0.6rem; }
 
